--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,23 @@
 REMOVE SPEED
+
 ON CLICK BUTTONS (PATH)
+
 HEALTH BAR TOP
+
 INPUT FIELDS
+
+1 PATH TILE CRASH
+
+IMPROVE SELECTION OF SELFMADE  MAPS IN GAME SCREEN
+
+DELETE SELECTED PROFILE BUG 
+
+fix game history shows ID instead of Count
+
+check saved games how the time works
+
+add saved games in db ?
+
+create table for enemies for each profile
+
+speed might be fixable
